# PUC-GCES-PY

./: README.md  docker-compose.yaml  dockerfile  dockerfile_python  pyproject.toml  test.py
.github/workflows/: build.yml  main.yml
docs/: conf.py
docs/_build/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/.doctrees/: environment.pickle  index.doctree
docs/_build/_sources/: index.rst.txt
docs/_build/_static/: documentation_options.js
metabase/config/: dockerfile_metabase
src/yamls/: test_confir.yaml
tests/: test.py
